--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Deploy to ConoHa via SFTP
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+    - name: Deploy to ConoHa via SSH
+      uses: easingthemes/ssh-deploy@v5.0.3
       with:
-        server: ${{ secrets.CONOHA_HOST }}
-        username: ${{ secrets.CONOHA_USERNAME }}
-        password: ${{ secrets.CONOHA_PASSWORD }}
-        port: 22
-        protocol: sftp
-        local-dir: ./
-        server-dir: /public_html/portfolio.tnbkn.com/
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        REMOTE_HOST: ${{ secrets.SSH_HOST }}
+        REMOTE_USER: ${{ secrets.SSH_USER }}
+        REMOTE_PORT: ${{ secrets.SSH_PORT }}
+        SOURCE: "./"
+        TARGET: "/home/${{ secrets.SSH_USER }}/public_html/portfolio.tnbkn.com/"
+        EXCLUDE: "/dist/, /node_modules/, /.git/, /.github/, /README.md, /.DS_Store"
